Implement Audio transcription and feedback

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,10 @@
     <button onclick="sendMessage()">Send</button>
     <p id="response"></p>
 
+    <input type="file" id="audioFile" accept="audio/*">
+    <button onclick="uploadAudio()">Upload Audio</button>
+    <p id="transcription"></p>
+    <p id="feedback"></p>
     <script src="script.js"></script>
 </body>
 </html>
